[package]
name = "road7"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
rustls = "0.20"
tokio-rustls = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
config = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
http = "0.2"
tokio-util = "0.7"
futures-util = "0.3"
rand = "0.8.5"
lru = "0.7" 
dashmap = "5.0"
regex = "1"
ammonia = "3.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
md5 = "0.7"
base64 = "0.13"
jsonwebtoken = "8.0"
prometheus = "0.13"